2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/zip/ZipFile.c (java_util_zip_ZipFile_getZipEntry0)
	(java_util_zip_ZipFile_getZipData0)
	(java_util_zip_ZipFile_getZipEntries0),
	kaffe/kaffevm/findInJar.c (findClassInJar)
	(getManifestMainAttribute),
	* kaffe/kaffeh/support.c (kaffeh_findClass): Close opened zip entries
	after use.

	Reported by:  Ito Kazumitsu  <kaz@maczuka.gcd.org>

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jar.h, kaffe/kaffevm/jar.c (lookupJarFile): Removed.

	* libraries/clib/zip/ZipFile.c (getZipEntry)
	(java_util_zip_ZipFile_getZipEntries0), 
	kaffe/kaffevm/findInJar.c (findClassInJar)
	(getManifestMainAttribute),
	kaffe/kaffeh/support.c (kaffeh_findClass): Use zzip_file_open directly.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jar.h, kaffe/kaffevm/jar.c (closeJarFile): Removed.

	* libraries/clib/zip/ZipFile.c (java_util_zip_ZipFile_closeZipFile0),
	kaffe/kaffeh/support.c (kaffeh_findClass): Use zzip_closedir directly.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jar.h, kaffe/kaffevm/jar.c (openJarFile): Removed.

	* libraries/clib/zip/ZipFile.c (java_util_zip_ZipFile_openZipFile0),
	kaffe/kaffevm/findInJar.c (findClassInJar),
	kaffe/kaffeh/support.c (kaffeh_findClass): Use zzip_opendir directly.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PROG_CC_C99): Ask for a C99 compiler, so that useful
	ISO C99 macros like isnan and signbit are defined in math.h.
	
	* kaffe/kaffevm/fp.c (doubleDivide): Return KAFFE_JDOUBLE_POS_INF or
	KAFFE_JDOUBLE_NEG_INF depending on the signbit of input.
	(doubleToLong, longToDouble): Removed unused functions.
	
	* kaffe/kaffevm/baseClasses.c (initBaseClasses): Initialize KAFFE_JDOUBLE_NEG_INF
	and KAFFE_JDOUBLE_POS_INF.

	* kaffe/kaffevm/baseClasses.h (KAFFE_JDOUBLE_POS_INF, KAFFE_JDOUBLE_NEG_INF): 