@@ -1,3 +1,9 @@
+2008-02-16  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/clib/zip/ZipFile.c (java_util_zip_ZipFile_getZipData0)
+	(java_util_zip_ZipFile_getZipEntries0): Only close entries we've 
+	opened successfully.
+
 2008-02-15  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/clib/zip/ZipFile.c (java_util_zip_ZipFile_getZipEntry0)
